# consensus-rs

./: .gitignore  .gitmodules  .travis.yml  :w  Cargo.toml  Dockerfile  MIGRATION_ACTIX_TO_TOKIO.md  README.md  build.sh
bft/: Cargo.toml  build.sh
bft/examples/: bft.rs  c1.toml  c2.toml  c3.toml  c4.toml  c5.toml  config.toml
bft/src/: height_vote_ser.rs  lib.rs  round_state.rs  state.rs  types.rs
bft/src/api/: mod.rs
bft/src/cmd/: mod.rs
bft/src/common/: mod.rs
bft/src/config/: mod.rs
bft/src/consensus/: backend.rs  config.rs  consensus.rs  engine.rs  error.rs  events.rs  mod.rs  types.rs  validator.rs
bft/src/consensus/core/: back_log.rs  commit.rs  core.rs  mod.rs  new_header.rs  prepare.rs  preprepare.rs  request.rs  round_change.rs  round_change_set.rs  round_state.rs  timer.rs
bft/src/core/: actor.rs  back_log.rs  chain.rs  commit.rs  core.rs  events.rs  genesis.rs  ledger.rs  mod.rs  prepare.rs  preprepare.rs  request.rs  round_change.rs  round_change_set.rs  round_state.rs  timer.rs  transaction_pool.rs  tx_pool.rs  types.rs
bft/src/error/: mod.rs
bft/src/logger/: mod.rs
bft/src/minner/: mod.rs
bft/src/mocks/: mock_config.toml  mod.rs
bft/src/p2p/: config.rs  discover_service.rs  mod.rs  node.rs  protocol.rs  server.rs  session.rs
bft/src/pprof/: mod.rs
bft/src/protocol/: mod.rs
bft/src/store/: base_index.rs  baseindex.rs  entry.rs  ledger.rs  list_index.rs  map_index.rs  mod.rs  schema.rs  types.rs
bft/src/subscriber/: async_subscriber.rs  events.rs  mod.rs  sync_subscriber.rs
bft/src/types/: block.rs  mod.rs  transaction.rs  votes.rs
bft/src/util/: mod.rs
chain/: Cargo.toml  build.rs
chain/src/: block.rs  crypto.rs  lib.rs
chain/src/blockchain/: block-dpos.proto  block.rs  genesis.rs  mod.rs  schema.rs  transaction.rs
chain/src/blockchain/dpos/: block.proto  block.rs  mod.rs
chain/src/blockchain/dpos/block/: dpos.rs  mod.rs
chain/src/helper/: mod.rs  types.rs
chain/src/helpers/: mod.rs
chain/src/messages/: mod.rs  raw.rs
chain/src/storage/: db.rs  hash.rs  memorydb.rs  mod.rs  rocksdb.rs
crates/cryptocurrency-kit-rs/: .gitignore  Cargo.toml  README.md
crates/cryptocurrency-kit-rs/src/: crypto.rs  lib.rs  types.rs
crates/cryptocurrency-kit-rs/src/common/: mod.rs
crates/cryptocurrency-kit-rs/src/encoding/: bigarray.rs  json.rs  mod.rs
crates/cryptocurrency-kit-rs/src/ethkey/: crypto.rs  error.rs  keccak.rs  keypair.rs  mod.rs  random.rs  secret.rs  signature.rs
crates/cryptocurrency-kit-rs/src/mem/: mod.rs
crates/cryptocurrency-kit-rs/src/merkle_tree/: mod.rs
crates/cryptocurrency-kit-rs/src/storage/: error.rs  hash.rs  keys.rs  mod.rs  values.rs
crates/parity-rocksdb-sys/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs
crates/parity-rocksdb-sys/rocksdb/db/: db_impl.cc
crates/parity-rocksdb-sys/src/: ffi.rs
doc/: flow  rfc.md
dpos/: Cargo.toml  doc.md
dpos/src/: block.rs  blockchain.rs  delegates.rs  lib.rs  slot.rs  transaction.rs  util.rs
dpos/src/blockchain/: block.rs  config.rs  dposblock.rs  genesis.rs  mod.rs  schema.rs  transaction.rs
dpos/src/consensue/: accounts.rs  delegates.rs  mod.rs  slot.rs  util.rs
dpos/src/encoding/: tests.rs
dpos/src/helpers/: user_agent.rs
examples/: .bash_history  bft.rs  c1.toml  c2.toml  c3.toml  c4.toml  c5.toml  c6.toml  config.toml  dev-single.toml  docker_build.sh  docker_start.sh  p2p.rs
p2p/: Cargo.toml
p2p/doc/: Sequence Diagram0.asta  Sequence Diagram0.asta.bak  roadmap
p2p/src/: codec.rs  codec2.rs  lib.rs  peer.rs  raw.rs  server.rs  session.rs
p2p/src/kad/: base.rs  knodetable.rs  mod.rs  protocol.rs  service.rs
parity-common/kvdb-rocksdb/src/: lib.rs
rust-dht/src/: service.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/cmd/: mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/consensus/: backend.rs  config.rs  consensus.rs  engine.rs  error.rs  events.rs  mod.rs  types.rs  validator.rs
src/consensus/dpos/: delegates.rs  mod.rs  slot.rs
src/consensus/pbft/core/: back_log.rs  commit.rs  core.rs  mod.rs  new_header.rs  prepare.rs  preprepare.rs  request.rs  round_change.rs  round_change_set.rs  round_state.rs  runner.rs  timer.rs
src/core/: actor.rs  chain.rs  genesis.rs  ledger.rs  transaction_pool.rs  tx_pool.rs
src/error/: mod.rs
src/logger/: mod.rs
src/minner/: mod.rs
src/mocks/: mod.rs
src/p2p/: codec.rs  discover_service.rs  mod.rs  node.rs  protocol.rs  server.rs  session.rs
src/p2p/p2p/: Cargo.toml
src/p2p/p2p/src/: client.rs  peer.rs  session.rs
src/p2p/p2p/src/kad/: knodetable.rs
src/pprof/: mod.rs
src/protocol/: mod.rs
src/store/: base_index.rs  entry.rs  list_index.rs  map_index.rs  schema.rs  types.rs
src/subscriber/: cross_thread_events.rs  events.rs  mod.rs
src/types/: block.rs  mod.rs  transaction.rs  votes.rs
src/util/: mod.rs
