[package]
name = "consensus"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]
description = "bft consensus"
license = "GPL-3.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
runtime-fmt = "*"
bigint = "4.4.1"
byteorder = "1"
rand = "0.5"
hex = "*"
sha3 = "0.7.3"
rlp = "0.2.4"
lazy_static = "1.1.0"
crossbeam = {git = "https://github.com/crossbeam-rs/crossbeam.git"}
ethereum-types = "0.5.2"
lru_time_cache = "0.8.0"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
cryptocurrency-kit = {git = "https://github.com/laohanlinux/cryptocurrency-kit-rs.git", tag = "v0.1.1"}
kvdb-rocksdb = {path = "./parity-common/kvdb-rocksdb"}
kvdb = {path = "./parity-common/kvdb"}
transaction-pool = {path = "./parity-common/transaction-pool"}
log = "0.4"
env_logger = "0.6.0"
priority-queue = "0.5.2"
evmap = "4.0.0"
actix = "0.7"
actix-broker = "0.1.6"
actix-web-async-await = "0.1.0"
failure = "0.1.3"
#futures = "0.1.26"
tokio = "0.1"
tokio-threadpool = "0.1.9"
bytes = "0.4"
clap = "2.32.0"
toml = "0.4"
serde_millis = "0.1.1"
parking_lot = {version = "0.6", features = ["nightly"]}
uuid = { version = "0.7", features = ["v5"] }
flame = "0.2.2"
tokio-signal = "0.2"
tide = "0.0.5"
http = "0.1"
futures-preview = "0.3.0-alpha.13"

[dependencies.libp2p]
git = "https://github.com/laohanlinux/rust-libp2p.git"

[profile.release]
debug = true

[dependencies.tap]
git = "https://git.myrrlyn.net/myrrlyn/tap"
