[package]
name = "consensus"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]
description = "bft consensus"
license = "GPL-3.0"
edition = "2021"

[features]
default = ["p2p"]
p2p = []

[dependencies]
chrono = { version = "0.4.29", features = ["serde"] }
chrono-humanize = "0.0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bigint = "4.4.1"
byteorder = "1"
rand = "0.5"
hex = "*"
sha3 = "0.7.3"
rlp = "0.2.4"
lazy_static = "1.1.0"
crossbeam = {git = "https://github.com/crossbeam-rs/crossbeam.git"}
ethereum-types = "0.5.2"
lru_time_cache = "0.8.0"
eth-secp256k1 = "0.5"
cryptocurrency-kit = { path = "./crates/cryptocurrency-kit-rs" }
transaction-pool = { path = "./crates/transaction-pool" }
kvdb = { path = "./crates/kvdb" }
kvdb-rocksdb = { path = "./crates/kvdb-rocksdb" }
log = "0.4"
env_logger = "0.6.0"
priority-queue = "0.5.2"
evmap = "4.0.0"
failure = "0.1.3"
futures = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
axum = { version = "0.7", features = ["json"] }
bytes = "1"
clap = "2.32.0"
toml = "0.4"
serde_millis = "0.1.1"
parking_lot = "0.6"
uuid = { version = "0.7", features = ["v5"] }
flame = "0.2.2"
tokio-signal = "0.2"
http = "0.1"
tap = "1.0"

[dependencies.libp2p]
version = "0.53"
default-features = false
features = ["mdns", "tcp", "tokio", "noise", "yamux"]

[patch.crates-io]
parity-rocksdb-sys = { path = "./crates/parity-rocksdb-sys" }

[profile.release]
debug = true
