[package]
name = "bft"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]
description = "bft consensus"
license = "GPL-3.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
runtime-fmt = "*"
bigint = "4.4.1"
rand = "0.5"
hex = "*"
sha3 = "0.7.3"
rlp = "0.2.4"
rmp = "*"
rmp-serde  = "*"
lazy_static = "1.1.0"
ethereum-types = "*"
lru_time_cache = "0.8.0"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
cryptocurrency-kit = {git = "https://github.com/laohanlinux/cryptocurrency-kit-rs.git"}
kvdb-rocksdb = {path = "./parity-common/kvdb-rocksdb"}
