[package]
name = "chain"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]

[dependencies]
rocksdb = "0.8.1"
exonum_sodiumoxide = "0.0.16"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
byteorder = "1.1.0"
chrono = "0.4"
uuid = { version = "0.6.0", features = ["serde"] }

[lib]
name = "chain"
path = "src/lib.rs"