[package]
name = "p2p"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]

[dependencies]
farmhash = "1.1.5"
actix  = "*"
byteorder = "*"
bytes = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "^0.3"
rand = "^0.3"
rustc-serialize = "^0.3"

futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"

